--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 @import 'dual';
 @import 'single';
 @import 'solid';
+@import 'simple';
+@import 'next';
+@import 'nextsimple';
 
 html {
   background-color: rgba(0, 0, 0, 0);
@@ -12,7 +15,7 @@ html {
   top: 0;
   left: 0;
   z-index: -1;
-  opacity: 0.95;
+  opacity: 1;
 }
 
 .disable {
