--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'simple';
 @import 'next';
 @import 'nextsimple';
+@import 'bracketsimple';
 
 html {
   background-color: rgba(0, 0, 0, 0);
