--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,9 @@
+:root {
+  --black: #202025;
+  --gray: #C4C4C4;
+  --white: #ffffff;
+  --primary: #CCB280;
+}
 
 html,
 body {
@@ -5,6 +11,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--black);
+  font-size: 12px;
 }
 
 a {
@@ -20,6 +28,30 @@ html {
   background-color: rgba(0, 0, 0, 0);
 }
 
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 2.6rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+hr {
+  background-color: var(--gray);
+}
+
+.board {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 1;
+}
 
 .fade-enter  {
   opacity: 0;
